--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">ActivityDemo</string>
-    <string name="hint_text">Enter a message...</string>
-    <string name="default_message">yeet</string>
+    <string name="hint_text">Enter a message…</string>
+    <string name="default_message">Loading…</string>
     <string name="recyclerview_text">dummy text</string>
 </resources>
