60, EXC-51: Implement email app intent for sharing links

--- a/app/src/main/res/values-hu/strings.xml
+++ b/app/src/main/res/values-hu/strings.xml
@@ -12,4 +12,5 @@
     <string name="searchFragmentError">Hibát észleltünk.</string>
     <string name="detailsFragmentError">A filmet nem sikerült betölteni.</string>
     <string name="noMovieVideosError">Ehhez a filmhez nem tartoznak videók.</string>
+    <string name="emailSubject">Filmajánló</string>
 </resources>
