--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,6 @@
     <string name="detailsFragmentError">Unable to load movie.</string>
     <string name="noMovieVideosError">There are no videos for this movie.</string>
     <string name="linkShareTextTemplate" translatable="false">%s %s</string>
+    <string name="emailSubject">Movie Recommendation</string>
+    <string name="intentMailTo" translatable="false">mailto:</string>
 </resources>
