--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="appName" translatable="false">ActivityDemo</string>
-    <string name="hintText">Enter a message…</string>
+    <string name="hintText">Enter the title of a movie…</string>
     <string name="defaultMessage">Loading…</string>
     <string name="videoButtonNext">Go to video</string>
     <string name="shareEmail">Share via email</string>
