61, EXC-52: Add error text to bottom sheet, when no email app is installed

--- a/app/src/main/res/values-hu/strings.xml
+++ b/app/src/main/res/values-hu/strings.xml
@@ -13,4 +13,5 @@
     <string name="detailsFragmentError">A filmet nem sikerült betölteni.</string>
     <string name="noMovieVideosError">Ehhez a filmhez nem tartoznak videók.</string>
     <string name="emailSubject">Filmajánló</string>
+    <string name="noEmailAppString">Nincs telepített email kliens.</string>
 </resources>
