--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="noMovieVideosError">There are no videos for this movie.</string>
     <string name="linkShareTextTemplate" translatable="false">%s %s</string>
     <string name="emailSubject">Movie Recommendation</string>
+    <string name="noEmailAppString">No email client installed.</string>
 </resources>
