34, EXC-25: Add initial ConnectivityManager implementation

--- a/app/src/main/res/values-hu/strings.xml
+++ b/app/src/main/res/values-hu/strings.xml
@@ -14,4 +14,6 @@
     <string name="noMovieVideosError">Ehhez a filmhez nem tartoznak videók.</string>
     <string name="emailSubject">Filmajánló</string>
     <string name="noEmailAppString">Nincs telepített email kliens.</string>
+    <string name="connectionErrorText">Hoppá! Hálózati hiba történt.</string>
+    <string name="loadingFragmentText">Betöltés…</string>
 </resources>
